05-deployment-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-configmap
  namespace: demo
  labels:
    app: hello-configmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-configmap
  template:
    metadata:
      labels:
        app: hello-configmap
    spec:
      containers:
      - name: hello-configmap
        image: marcoamador/hello:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: configs-volume
          mountPath: /app/config.properties
          subPath: config.properties
      volumes:
      - name: configs-volume
        configMap:
          name: configs-file
