07-deployment-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-secret
  namespace: demo
  labels:
    app: hello-secret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-secret
  template:
    metadata:
      labels:
        app: hello-secret
    spec:
      containers:
      - name: hello-secret
        image: marcoamador/hello:1
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: secret-volume
          mountPath: /etc/secret-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: test-secret
