10-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hello-ds
  namespace: demo
  labels:
    app: hello-ds
spec:
  selector:
    matchLabels:
      app: hello-ds
  template:
    metadata:
      labels:
        app: hello-ds
    spec:
      containers:
        - image: marcoamador/hello:1.0.0
          name: hello-ds
