11-service-ds.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-ds
  name: hello-ds
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-ds
  type: NodePort
status:
  loadBalancer: {}
