03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello
spec:
  rules:
    - host: echo.com
      http:
         paths:
           - path: /
             backend:
               serviceName: hello
               servicePort: 8000
