12-ingress-ds.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ds
spec:
  rules:
    - host: echo-ds.com
      http:
         paths:
           - path: /
             backend:
               serviceName: hello-ds
               servicePort: 8080
