13-deployment-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-sidecar
  namespace: demo
  labels:
    app: hello-sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-sidecar
  template:
    metadata:
      labels:
        app: hello-sidecar
    spec:
      containers:
      - name: vache-proxy
        image: marcoamador/vache:1.1.4
        volumeMounts:
        - name: configs-cache
          mountPath: /mfamador/app/configs/config.yaml
          subPath: config.yaml
        ports:
        - name: proxy-http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: "/vache/healthz"
            port: proxy-http
        readinessProbe:
          httpGet:
            path: "/vache/healthz"
            port: proxy-http
      - name: hello
        image: marcoamador/hello:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      volumes:
      - name: configs-cache
        configMap:
          name: configs-cache
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-sidecar
  name: hello-sidecar
  namespace: demo
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: hello-sidecar
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-sidecar
  namespace: demo
spec:
  rules:
    - host: echo-sidecar.com
      http:
         paths:
           - path: /
             pathType: Prefix
             backend:
                service:
                  name: hello-sidecar
                  port:
                    number: 8000
