14-deployment-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-sidecar
  labels:
    app: hello-sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-sidecar
  template:
    metadata:
      labels:
        app: hello-sidecar
    spec:
      containers:
      - name: vache-proxy
        image: marcoamador/vache:1.1.1
        volumeMounts:
        - name: configs-cache
          mountPath: /mfamador/app/configs/config.yml
          subPath: config.yml
        ports:
        - name: proxy-http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: "/vache/healthz"
            port: proxy-http
        readinessProbe:
          httpGet:
            path: "/vache/healthz"
            port: proxy-http
      - name: hello-sidecar
        image: marcoamador/hello:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      volumes:
      - name: configs-cache
        configMap:
          name: configs-cache
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-sidecar
  name: hello-sidecar
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8000
  selector:
    app: hello
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-sidecar
spec:
  rules:
    - host: echo-sidecar.com
      http:
         paths:
           - path: /
             backend:
               serviceName: hello
               servicePort: 8000
